Se realizó el home.html y la función search(el buscador)

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -37,7 +37,13 @@
         <h2 class="text-center">La búsqueda no arrojó resultados...</h2>
         {% else %} {% for img in images %}
         <div class="col">
-            <div class="card mb-3 ms-5" style="max-width: 540px;">
+            {% if img.status == 'Alive' %}
+            <div class="card mb-3 ms-5" style="max-width: 540px; border-color: green; border-width: 3px;">
+            {% elif img.status == 'Dead' %}
+            <div class="card mb-3 ms-5" style="max-width: 540px; border-color: red; border-width: 3px;">
+            {% else %}
+            <div class="card mb-3 ms-5" style="max-width: 540px; border-color: orangered; border-width: 3px;">
+                {% endif %}
                 <div class="row g-0">
                     <div class="col-md-4">
                         <img src="{{ img.url }}" class="card-img-top" alt="imagen">
@@ -48,8 +54,9 @@
                             <h3 class="card-title">{{ img.name }}</h3>
                             <p class="card-text">
                                 <strong>
-                                            {% if true == 'Alive' %} 🟢 {{ img.status }} 
-                                            {% elif true == 'Dead' %} 🔴 {{ img.status }} 
+                                            {% if img.status == 'Alive' %} 🟢 {{ img.status }} 
+
+                                            {% elif img.status == 'Dead' %} 🔴 {{ img.status }} 
                                             {% else %} 🟠 {{ img.status }} 
                                             {% endif %}
                                         </strong>
